--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TH-starter",
+  "name": "th-starter",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:lilygdu/TH-starter.git",
@@ -9,5 +9,8 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
