--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "th-starter",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "git@github.com:lilygdu/TH-starter.git",
   "license": "MIT",
   "type": "module",
   "dependencies": {
     "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "parcel watch public/*.html & node index.js"
+  },
+  "devDependencies": {
+    "parcel": "^2.0.0-beta.1"
   }
 }
