many small fixes

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "es-dirname": "^0.1.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
