--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@stripe/stripe-js": "^1.13.1",
     "emailjs-com": "^2.6.4",
     "es-dirname": "^0.1.0",
     "express": "^4.17.1",
