--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "@stripe/stripe-js": "^1.13.1",
+    "date-fns": "^2.19.0",
     "emailjs-com": "^2.6.4",
     "es-dirname": "^0.1.0",
     "express": "^4.17.1",
