--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "stripe": "^8.138.0",
     "styled-components": "^5.2.1"
