--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
+    "react-click-away-listener": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "stripe": "^8.138.0",
