--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "styled-components": "^5.2.1"
   },
   "scripts": {
-    "start": "parcel watch public/*.html & node index.js"
+    "start": "parcel watch public/index.html & node index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
