--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emailjs-com": "^2.6.4",
     "es-dirname": "^0.1.0",
     "express": "^4.17.1",
+    "parcel": "^2.0.0-beta.2",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-click-away-listener": "^2.0.0",
@@ -23,9 +24,5 @@
   },
   "scripts": {
     "start": "parcel watch public/index.html & node index.js"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "parcel": "^2.0.0-beta.1"
   }
 }
