--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "scripts": {
     "dev": "parcel watch public/index.html & node index.js",
-    "start": "parcel build public/index.html && node index.js"
+    "start": "parcel build public/index.html & node index.js"
   }
 }
