--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "emailjs-com": "^2.6.4",
     "es-dirname": "^0.1.0",
     "express": "^4.17.1",
-    "express-sslify": "^1.2.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "parcel": "^2.0.0-beta.2",
     "pg": "^8.5.1",
     "react": "^17.0.1",
